<resources>
    <string name="app_name">QuizApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz">Quiz</string>
    <string name="question_amount">Question amount:</string>
    <string name="_5">5</string>
    <string name="category">Category</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">START</string>
    <string name="correct_answers_8_10">Correct answers 8/10</string>
    <string name="difficulty_easy">Difficulty : Easy</string>
    <string name="_12_may_2019_20_32">12 may 2019 20:32</string>
    <string name="category_mixed">Category:Mixed</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="clear_history">Clear history</string>

    <string-array name="categories_list">
        <item>Any Category</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Musicals &amp; Theatres</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science &amp; Nature</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
        <item>Entertainment: Comics</item>
        <item>Science: Gadgets</item>
        <item>Japanese Anime &amp; Manga</item>
        <item>Cartoon &amp; Animations</item>
    </string-array>

    <string-array name="difficulty_list">
        <item>Any Difficulty</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

</resources>
